tests/negative/typecheck/infer_not_in.orng
// infer_not_in.orng:8:24: error: member `d` not in enum `My_Type`
//     let x: My_Type = .d
//                       ^
// 
enum My_Type {a, b, c}

fn main () -> Int {
    let x: My_Type = .d
    0
}